--- a/resources/message/MessageResource_zh_CN.properties
+++ b/resources/message/MessageResource_zh_CN.properties
@@ -116,7 +116,7 @@ statistics.caliber.all=\u6309\u5168\u90E8
 
 staff.costs.threshold=\u4EBA\u5458\u6210\u672C\u63D0\u793A\u9600\u503C
 
-#\u5DE5\u8D44
+#\u5DE5\u8D44\u8BBE\u7F6E
 sick_leave_salary=\u75C5\u5047\u5DE5\u8D44\u8BBE\u7F6E
 
 
