处理需求   处理菜单 许可等

--- a/resources/message/MessageMenu_zh_CN.properties
+++ b/resources/message/MessageMenu_zh_CN.properties
@@ -2,6 +2,7 @@ menu.level1.basic.data=\u57FA\u7840\u6570\u636E
 menu.level1.project.costs=\u9879\u76EE\u6210\u672C
 menu.level1.project.income=\u9879\u76EE\u6536\u5165
 menu.level1.depart.statistics=\u90E8\u95E8\u7EDF\u8BA1
+menu.level1.financial.analysis=\u8D22\u52A1\u5206\u6790
 menu.level1.statistics=\u9879\u76EE\u6838\u7B97
 menu.level1.system=\u7CFB\u7EDF\u7BA1\u7406
 menu.level1.shareinfo=\u5171\u4EAB\u7A7A\u95F4
@@ -26,6 +27,7 @@ menu.level2.reimburse.costs=\u62A5\u9500\u7BA1\u7406
 menu.level2.project.expend=\u9879\u76EE\u4ED8\u6B3E\u4FE1\u606F
 menu.level2.project.staff.cost=\u9879\u76EE\u4EBA\u5458\u6210\u672C
 menu.level2.project.salary.mail=\u5DE5\u8D44\u90AE\u4EF6
+menu.level2.common.cost=\u516C\u5171\u8D39\u7528\u7BA1\u7406
 
 
 menu.level2.monthly.statement=\u6708\u5EA6\u7ED3\u7B97\u5355
@@ -36,6 +38,13 @@ menu2.level2.staffjoin.statistics=\u5458\u5DE5\u5165\u573A\u7EDF\u8BA1
 menu2.level2.staffleave.statistics=\u5458\u5DE5\u79BB\u573A\u7EDF\u8BA1
 menu2.level2.departcost.manage=\u90E8\u95E8\u8D39\u7528\u7BA1\u7406
 menu2.level2.depart.statistics.report=\u5206\u90E8\u95E8\u7EDF\u8BA1
+
+
+menu2.level2.company.financial.analysis=\u516C\u53F8\u8D22\u52A1\u5206\u6790
+menu2.level2.department.financial.analysis=\u90E8\u95E8\u8D22\u52A1\u5206\u6790
+menu2.level2.sales.financial.analysis=\u9500\u552E\u8D22\u52A1\u5206\u6790
+
+
 
 
 menu2.level2.statistics.gross.profit=\u9879\u76EE\u5B9E\u9645\u6BDB\u5229
