--- a/resources/message/MessageLog_en_US.properties
+++ b/resources/message/MessageLog_en_US.properties
@@ -1,69 +1,80 @@
 
 
-user.user_name=\u7528\u6237\u59d3\u540d
-user.user_loginname=\u7528\u6237\u767b\u5f55\u540d
-user.description=\u7528\u6237\u63cf\u8ff0
-user.user_deptname=\u7528\u6237\u90e8\u95e8
+user.user_name=\u7528\u6237\u59D3\u540D
+user.user_loginname=\u7528\u6237\u767B\u5F55\u540D
+user.description=\u7528\u6237\u63CF\u8FF0
+user.user_deptname=\u7528\u6237\u90E8\u95E8
 
 
 
-insert=\u65b0\u589e
-update=\u4fee\u6539
+insert=\u65B0\u589E
+update=\u4FEE\u6539
 delete=\u5220\u9664
-recover=\u6062\u590d
-read=\u67e5\u770b
+recover=\u6062\u590D
+read=\u67E5\u770B
 check=\u6838\u5355
-uncheck=\u53d6\u6d88\u6838\u5355
-updatepwd=\u4fee\u6539\u5bc6\u7801
-addrole=\u589e\u52a0\u89d2\u8272
-deleterole=\u5220\u9664\u89d2\u8272
-dallot=\u5206\u914d
-share=\u5171\u4eab
+uncheck=\u53D6\u6D88\u6838\u5355
+updatepwd=\u4FEE\u6539\u5BC6\u7801
+addrole=\u589E\u52A0\u89D2\u8272
+deleterole=\u5220\u9664\u89D2\u8272
+dallot=\u5206\u914D
+share=\u5171\u4EAB
 
 user=\u7528\u6237
-dept=\u90e8\u95e8
-dept.objective=\u90e8\u95e8\u76ee\u6807
-role=\u89d2\u8272
-log=\u65e5\u5fd7
-staff.cost=\u4eba\u5458\u6210\u672c
-staff.raise=\u5458\u5de5\u52a0\u85aa\u8bb0\u5f55
-staff.positions=\u5458\u5de5\u664b\u5347\u8bb0\u5f55
-staff.rewardpenalty=\u5458\u5de5\u5956\u60e9\u8bb0\u5f55
-staff.assessmen=\u5458\u5de5\u7ee9\u6548\u8003\u6838
+dept=\u90E8\u95E8
+dept.objective=\u90E8\u95E8\u76EE\u6807
+role=\u89D2\u8272
+log=\u65E5\u5FD7
+staff.cost=\u4EBA\u5458\u6210\u672C
+staff.raise=\u5458\u5DE5\u52A0\u85AA\u8BB0\u5F55
+staff.positions=\u5458\u5DE5\u664B\u5347\u8BB0\u5F55
+staff.rewardpenalty=\u5458\u5DE5\u5956\u60E9\u8BB0\u5F55
+staff.assessmen=\u5458\u5DE5\u7EE9\u6548\u8003\u6838
 
-staffex=\u85aa\u8d44\u6a21\u5f0f\u8bbe\u7f6e
-marketsets=\u85aa\u8d44\u6a21\u5f0f\u5168\u5c40\u8bbe\u7f6e
-itemdefine=\u8425\u9500\u6a21\u5f0f\u8d39\u7528\u9879\u5b9a\u4e49
-
-
-project=\u9879\u76ee\u4fe1\u606f
-insurance.grade=\u4fdd\u9669\u6863\u6b21
-other.staff=\u884c\u653f\u4eba\u5458
-contract=\u5408\u540c
-recruitinfo=\u7b80\u5386
-potentialclient=\u6f5c\u5728\u5ba2\u6237
-potentialclient.followup=\u6f5c\u5728\u5ba2\u6237\u8ddf\u8fdb\u4fe1\u606f
-
-work.attendance=\u8003\u52e4\u5355
-salary=\u5de5\u8d44
-project.staff.cost=\u9879\u76ee\u4eba\u5458\u6210\u672c
-reimburse.costs=\u62a5\u9500\u8d39\u7528
-project.expend=\u9879\u76ee\u4ed8\u6b3e\u4fe1\u606f
-monthly.statement=\u6708\u5ea6\u7ed3\u7b97\u5355
-invoice=\u53d1\u7968
-received.payment=\u5230\u6b3e\u8bb0\u5f55
+staffex=\u85AA\u8D44\u6A21\u5F0F\u8BBE\u7F6E
+marketsets=\u85AA\u8D44\u6A21\u5F0F\u5168\u5C40\u8BBE\u7F6E
+itemdefine=\u8425\u9500\u6A21\u5F0F\u8D39\u7528\u9879\u5B9A\u4E49
 
 
-personnelmonthly=\u4eba\u4e8b\u6708\u62a5
-personnel.monthly=\u4eba\u4e8b\u6708\u62a5
-insurance=\u4fdd\u9669
+project=\u9879\u76EE\u4FE1\u606F
+insurance.grade=\u4FDD\u9669\u6863\u6B21
+contract=\u6536\u6B3E\u5408\u540C
+paycontract=\u4ED8\u6B3E\u5408\u540C
+recruitinfo=\u7B80\u5386
+potentialclient=\u6F5C\u5728\u5BA2\u6237
+potentialclient.followup=\u6F5C\u5728\u5BA2\u6237\u8DDF\u8FDB\u4FE1\u606F
 
-depart.costs=\u90e8\u95e8\u8d39\u7528
+work.attendance=\u8003\u52E4\u5355
+salary=\u5DE5\u8D44
+project.staff.cost=\u9879\u76EE\u4EBA\u5458\u6210\u672C
+reimburse.costs=\u62A5\u9500\u8D39\u7528
+project.expend=\u9879\u76EE\u4ED8\u6B3E\u4FE1\u606F
+common.cost=\u516C\u5171\u8D39\u7528
 
-client=\u5ba2\u6237
-reimburse.item=\u62a5\u9500\u9879\u76ee
-accounts.type=\u6536\u6b3e\u65b9\u5f0f
-dicdata=\u5b57\u5178\u6570\u636e
-mail.sender=\u53d1\u4ef6\u7bb1
-set.param=\u53c2\u6570
-set.paramex=\u5de5\u8d44\u516c\u5f0f\u8bbe\u7f6e
+
+
+other.staff=\u603B\u90E8\u4EBA\u5458
+other.work.attendance=\u603B\u90E8\u8003\u52E4\u5355
+other.salary=\u603B\u90E8\u5DE5\u8D44
+other.staff.cost=\u603B\u90E8\u4EBA\u5458\u6210\u672C
+
+
+
+monthly.statement=\u6708\u5EA6\u7ED3\u7B97\u5355
+invoice=\u53D1\u7968
+received.payment=\u5230\u6B3E\u8BB0\u5F55
+
+
+personnelmonthly=\u4EBA\u4E8B\u6708\u62A5
+personnel.monthly=\u4EBA\u4E8B\u6708\u62A5
+insurance=\u4FDD\u9669
+
+depart.costs=\u90E8\u95E8\u8D39\u7528
+
+client=\u5BA2\u6237
+reimburse.item=\u62A5\u9500\u9879\u76EE
+accounts.type=\u6536\u6B3E\u65B9\u5F0F
+dicdata=\u5B57\u5178\u6570\u636E
+mail.sender=\u53D1\u4EF6\u7BB1
+set.param=\u53C2\u6570
+set.paramex=\u5DE5\u8D44\u516C\u5F0F\u8BBE\u7F6E
