--- a/resources/message/MessageRbac_en_US.properties
+++ b/resources/message/MessageRbac_en_US.properties
@@ -1,156 +1,200 @@
-permit.user.view=\u67e5\u770b\u7528\u6237
-permit.user.add=\u589e\u52a0\u7528\u6237
-permit.user.update=\u4fee\u6539\u7528\u6237
+permit.user.view=\u67E5\u770B\u7528\u6237
+permit.user.add=\u589E\u52A0\u7528\u6237
+permit.user.update=\u4FEE\u6539\u7528\u6237
 permit.user.delete=\u5220\u9664\u7528\u6237
-permit.user.changepwd=\u4fee\u6539\u5bc6\u7801
-permit.dept.view=\u67e5\u770b\u90e8\u95e8
-permit.dept.add=\u589e\u52a0\u90e8\u95e8
-permit.dept.update=\u4fee\u6539\u90e8\u95e8
-permit.dept.delete=\u5220\u9664\u90e8\u95e8
-permit.role.view=\u67e5\u770b\u89d2\u8272
-permit.role.add=\u65b0\u589e\u89d2\u8272
-permit.role.update=\u4fee\u6539\u89d2\u8272
-permit.role.delete=\u5220\u9664\u89d2\u8272
-permit.log.view=\u67e5\u770b\u65e5\u5fd7
-permit.log.delete=\u5220\u9664\u65e5\u5fd7
-permit.staff.view=\u67e5\u770b\u4eba\u5458\u6210\u672c
-permit.staff.add=\u589e\u52a0\u4eba\u5458\u6210\u672c
-permit.staff.update=\u4fee\u6539\u4eba\u5458\u6210\u672c
-permit.staff.delete=\u5220\u9664\u4eba\u5458\u6210\u672c
-permit.porject.view=\u67e5\u770b\u9879\u76ee\u4fe1\u606f
-permit.project.add=\u589e\u52a0\u9879\u76ee\u4fe1\u606f
-permit.project.update=\u4fee\u6539\u9879\u76ee\u4fe1\u606f
-permit.project.delete=\u5220\u9664\u9879\u76ee\u4fe1\u606f
-permit.work.attendance.view=\u67e5\u770b\u8003\u52e4\u8bb0\u5f55
-permit.work.attendance.add=\u589e\u52a0\u8003\u52e4\u8bb0\u5f55
-permit.work.attendance.update=\u4fee\u6539\u8003\u52e4\u8bb0\u5f55
-permit.work.attendance.delete=\u5220\u9664\u8003\u52e4\u8bb0\u5f55
-permit.work.attendance.check=\u6838\u5b9e\u8003\u52e4\u8bb0\u5f55
-permit.salary.view=\u67e5\u770b\u5de5\u8d44\u4fe1\u606f
-permit.salary.add=\u589e\u52a0\u5de5\u8d44\u4fe1\u606f
-permit.salary.update=\u4fee\u6539\u5de5\u8d44\u4fe1\u606f
-permit.salary.delete=\u5220\u9664\u5de5\u8d44\u4fe1\u606f
-permit.salary.check=\u6838\u5b9e\u5de5\u8d44\u4fe1\u606f
-permit.salary.uncheck=\u53d6\u6d88\u6838\u5355\u7533\u8bf7
-permit.salary.mail=\u53d1\u9001\u5de5\u8d44\u90ae\u4ef6
-permit.project.staff.cost.view=\u67e5\u770b\u9879\u76ee\u4eba\u5458\u6210\u672c
-permit.project.staff.cost.check=\u6838\u5b9e\u9879\u76ee\u4eba\u5458\u6210\u672c
-permit.reimburse.view=\u67e5\u770b\u62a5\u9500\u8d39\u7528
-permit.reimburse.add=\u65b0\u589e\u62a5\u9500\u8d39\u7528
-permit.reimburse.update=\u4fee\u6539\u62a5\u9500\u8d39\u7528
-permit.reimburse.delete=\u5220\u9664\u62a5\u9500\u8d39\u7528
-permit.reimburse.check=\u6838\u5b9e\u62a5\u9500\u8d39\u7528
-permit.reimburse.uncheck=\u53d6\u6d88\u6838\u5355\u7533\u8bf7
-permit.project.expend.view=\u67e5\u770b\u4ed8\u6b3e\u4fe1\u606f
-permit.project.expend.add=\u589e\u52a0\u4ed8\u6b3e\u4fe1\u606f
-permit.project.expend.update=\u4fee\u6539\u4ed8\u6b3e\u4fe1\u606f
-permit.project.expend.delete=\u5220\u9664\u4ed8\u6b3e\u4fe1\u606f
-permit.project.expend.check=\u6838\u5b9e\u4ed8\u6b3e\u4fe1\u606f
-permit.project.expend.uncheck=\u53d6\u6d88\u6838\u5355\u7533\u8bf7
-permit.monthly.statement.view=\u67e5\u770b\u6708\u5ea6\u7ed3\u7b97\u5355
-permit.monthly.statement.add=\u589e\u52a0\u6708\u5ea6\u7ed3\u7b97\u5355
-permit.monthly.statement.update=\u4fee\u6539\u6708\u5ea6\u7ed3\u7b97\u5355
-permit.monthly.statement.delete=\u5220\u9664\u6708\u5ea6\u7ed3\u7b97\u5355
-permit.monthly.statement.check=\u6838\u5b9e\u6708\u5ea6\u7ed3\u7b97\u5355
-permit.monthly.statement.uncheck=\u53d6\u6d88\u6838\u5355\u7533\u8bf7
-permit.invoice.view=\u67e5\u770b\u53d1\u7968
-permit.invoice.add=\u589e\u52a0\u53d1\u7968
-permit.invoice.update=\u4fee\u6539\u53d1\u7968
-permit.invoice.delete=\u5220\u9664\u53d1\u7968
-permit.invoice.check=\u6838\u5b9e\u53d1\u7968
-permit.invoice.uncheck=\u53d6\u6d88\u6838\u5355\u7533\u8bf7
-permit.received.payment.view=\u67e5\u770b\u5230\u6b3e\u8bb0\u5f55
-permit.received.payment.add=\u589e\u52a0\u5230\u6b3e\u8bb0\u5f55
-permit.received.payment.update=\u4fee\u6539\u5230\u6b3e\u8bb0\u5f55
-permit.received.payment.delete=\u5220\u9664\u5230\u6b3e\u8bb0\u5f55
-permit.received.payment.check=\u6838\u5b9e\u5230\u6b3e\u8bb0\u5f55
-permit.received.payment.uncheck=\u53d6\u6d88\u6838\u5355\u7533\u8bf7
+permit.user.changepwd=\u4FEE\u6539\u5BC6\u7801
+permit.dept.view=\u67E5\u770B\u90E8\u95E8
+permit.dept.add=\u589E\u52A0\u90E8\u95E8
+permit.dept.update=\u4FEE\u6539\u90E8\u95E8
+permit.dept.delete=\u5220\u9664\u90E8\u95E8
+permit.role.view=\u67E5\u770B\u89D2\u8272
+permit.role.add=\u65B0\u589E\u89D2\u8272
+permit.role.update=\u4FEE\u6539\u89D2\u8272
+permit.role.delete=\u5220\u9664\u89D2\u8272
+permit.log.view=\u67E5\u770B\u65E5\u5FD7
+permit.log.delete=\u5220\u9664\u65E5\u5FD7
+permit.staff.view=\u67E5\u770B\u4EBA\u5458\u6210\u672C
+permit.staff.add=\u589E\u52A0\u4EBA\u5458\u6210\u672C
+permit.staff.update=\u4FEE\u6539\u4EBA\u5458\u6210\u672C
+permit.staff.delete=\u5220\u9664\u4EBA\u5458\u6210\u672C
+permit.porject.view=\u67E5\u770B\u9879\u76EE\u4FE1\u606F
+permit.project.add=\u589E\u52A0\u9879\u76EE\u4FE1\u606F
+permit.project.update=\u4FEE\u6539\u9879\u76EE\u4FE1\u606F
+permit.project.delete=\u5220\u9664\u9879\u76EE\u4FE1\u606F
+
+permit.work.attendance.view=\u67E5\u770B\u8003\u52E4\u8BB0\u5F55
+permit.work.attendance.add=\u589E\u52A0\u8003\u52E4\u8BB0\u5F55
+permit.work.attendance.update=\u4FEE\u6539\u8003\u52E4\u8BB0\u5F55
+permit.work.attendance.delete=\u5220\u9664\u8003\u52E4\u8BB0\u5F55
+permit.work.attendance.check=\u6838\u5B9E\u8003\u52E4\u8BB0\u5F55
+
+permit.salary.view=\u67E5\u770B\u5DE5\u8D44\u4FE1\u606F
+permit.salary.add=\u589E\u52A0\u5DE5\u8D44\u4FE1\u606F
+permit.salary.update=\u4FEE\u6539\u5DE5\u8D44\u4FE1\u606F
+permit.salary.delete=\u5220\u9664\u5DE5\u8D44\u4FE1\u606F
+permit.salary.check=\u6838\u5B9E\u5DE5\u8D44\u4FE1\u606F
+permit.salary.uncheck=\u53D6\u6D88\u6838\u5355\u7533\u8BF7
+
+permit.salary.mail=\u53D1\u9001\u5DE5\u8D44\u90AE\u4EF6
+permit.project.staff.cost.view=\u67E5\u770B\u9879\u76EE\u4EBA\u5458\u6210\u672C
+permit.project.staff.cost.check=\u6838\u5B9E\u9879\u76EE\u4EBA\u5458\u6210\u672C
+permit.reimburse.view=\u67E5\u770B\u62A5\u9500\u8D39\u7528
+permit.reimburse.add=\u65B0\u589E\u62A5\u9500\u8D39\u7528
+permit.reimburse.update=\u4FEE\u6539\u62A5\u9500\u8D39\u7528
+permit.reimburse.delete=\u5220\u9664\u62A5\u9500\u8D39\u7528
+permit.reimburse.check=\u6838\u5B9E\u62A5\u9500\u8D39\u7528
+permit.reimburse.uncheck=\u53D6\u6D88\u6838\u5355\u7533\u8BF7
+permit.project.expend.view=\u67E5\u770B\u4ED8\u6B3E\u4FE1\u606F
+permit.project.expend.add=\u589E\u52A0\u4ED8\u6B3E\u4FE1\u606F
+permit.project.expend.update=\u4FEE\u6539\u4ED8\u6B3E\u4FE1\u606F
+permit.project.expend.delete=\u5220\u9664\u4ED8\u6B3E\u4FE1\u606F
+permit.project.expend.check=\u6838\u5B9E\u4ED8\u6B3E\u4FE1\u606F
+permit.project.expend.uncheck=\u53D6\u6D88\u6838\u5355\u7533\u8BF7
+
+permit.common.cost.view=\u67E5\u770B\u516C\u5171\u8D39\u7528\u4FE1\u606F
+permit.common.cost.add=\u589E\u52A0\u516C\u5171\u8D39\u7528\u4FE1\u606F
+permit.common.cost.update=\u4FEE\u6539\u516C\u5171\u8D39\u7528\u4FE1\u606F
+permit.common.cost.delete=\u5220\u9664\u516C\u5171\u8D39\u7528\u4FE1\u606F
+permit.common.cost.check=\u6838\u5B9E\u516C\u5171\u8D39\u7528\u4FE1\u606F
+permit.common.cost.uncheck=\u53D6\u6D88\u6838\u5355\u7533\u8BF7
 
 
-permit.gross.profit.view=\u67e5\u770b\u9879\u76ee\u5b9e\u9645\u6bdb\u5229
-permit.gross.profit2.view=\u67e5\u770b\u9879\u76ee\u6bdb\u5229
 
-permit.sales.view=\u67e5\u770b\u9879\u76ee\u9500\u552e\u989d
-permit.receivables.view=\u67e5\u770b\u9879\u76ee\u5e94\u6536\u6b3e
-permit.staffprofit.view=\u5458\u5de5\u5229\u6da6\u7edf\u8ba1
-
-
-permit.client.view=\u67e5\u770b\u5ba2\u6237
-permit.client.add=\u589e\u52a0\u5ba2\u6237
-permit.client.update=\u4fee\u6539\u5ba2\u6237
-permit.client.delete=\u5220\u9664\u5ba2\u6237
-
-permit.insurance.grade.view=\u67e5\u770b\u4fdd\u9669\u6863\u6b21
-permit.insurance.grade.add=\u589e\u52a0\u4fdd\u9669\u6863\u6b21
-permit.insurance.grade.update=\u4fee\u6539\u4fdd\u9669\u6863\u6b21
-permit.insurance.grade.delete=\u5220\u9664\u4fdd\u9669\u6863\u6b21
-
-permit.other.staff.view=\u67e5\u770b\u884c\u653f\u4eba\u5458
-permit.other.staff.add=\u589e\u52a0\u884c\u653f\u4eba\u5458
-permit.other.staff.update=\u4fee\u6539\u884c\u653f\u4eba\u5458
-permit.other.staff.delete=\u5220\u9664\u884c\u653f\u4eba\u5458
-
-permit.contract.view=\u67e5\u770b\u5408\u540c
-permit.contract.add=\u589e\u52a0\u5408\u540c
-permit.contract.update=\u4fee\u6539\u5408\u540c
-permit.contract.delete=\u5220\u9664\u5408\u540c
-
-permit.potentialclient.view=\u67e5\u770b\u6f5c\u5728\u5ba2\u6237
-permit.potentialclient.add=\u589e\u52a0\u6f5c\u5728\u5ba2\u6237
-permit.potentialclient.update=\u4fee\u6539\u6f5c\u5728\u5ba2\u6237
-permit.potentialclient.delete=\u5220\u9664\u6f5c\u5728\u5ba2\u6237
-permit.potentialclient.tosales.delete=\u5206\u914d\u7ed9\u9500\u552e\u4eba\u5458
-permit.potentialclient.followup.add=\u589e\u52a0\u8ddf\u8fdb\u8bb0\u5f55
-permit.potentialclient.followup.update=\u4fee\u6539\u8ddf\u8fdb\u8bb0\u5f55
-permit.potentialclient.followup.delete=\u5220\u9664\u8ddf\u8fdb\u8bb0\u5f55
-
-permit.recruitinfo.view=\u67e5\u770b\u7b80\u5386
-permit.recruitinfo.review=\u7b80\u5386\u67e5\u91cd
-permit.recruit.library.view=\u67e5\u770b\u7b80\u5386\u5e93
+permit.other.staff.view=\u67E5\u770B\u884C\u653F\u4EBA\u5458
+permit.other.staff.add=\u589E\u52A0\u884C\u653F\u4EBA\u5458
+permit.other.staff.update=\u4FEE\u6539\u884C\u653F\u4EBA\u5458
+permit.other.staff.delete=\u5220\u9664\u884C\u653F\u4EBA\u5458
+permit.other.work.attendance.view=\u67E5\u770B\u603B\u90E8\u8003\u52E4\u8BB0\u5F55
+permit.other.work.attendance.add=\u589E\u52A0\u603B\u90E8\u8003\u52E4\u8BB0\u5F55
+permit.other.work.attendance.update=\u4FEE\u6539\u603B\u90E8\u8003\u52E4\u8BB0\u5F55
+permit.other.work.attendance.delete=\u5220\u9664\u603B\u90E8\u8003\u52E4\u8BB0\u5F55
+permit.other.work.attendance.check=\u6838\u5B9E\u603B\u90E8\u8003\u52E4\u8BB0\u5F55
+permit.other.salary.view=\u67E5\u770B\u603B\u90E8\u5DE5\u8D44\u4FE1\u606F
+permit.other.salary.add=\u589E\u52A0\u603B\u90E8\u5DE5\u8D44\u4FE1\u606F
+permit.other.salary.update=\u4FEE\u6539\u603B\u90E8\u5DE5\u8D44\u4FE1\u606F
+permit.other.salary.delete=\u5220\u9664\u603B\u90E8\u5DE5\u8D44\u4FE1\u606F
+permit.other.salary.check=\u6838\u5B9E\u603B\u90E8\u5DE5\u8D44\u4FE1\u606F
+permit.other.salary.uncheck=\u53D6\u6D88\u6838\u5355\u7533\u8BF7
+permit.other.staff.cost.view=\u67E5\u770B\u603B\u90E8\u4EBA\u5458\u6210\u672C
 
 
-permit.staffex.view=\u67e5\u770b\u85aa\u916c\u6a21\u5f0f\u8bbe\u7f6e
-permit.staffex.update=\u7f16\u8f91\u85aa\u916c\u6a21\u5f0f\u8bbe\u7f6e
-permit.staffex.count.view=\u67e5\u770b\u8425\u9500\u6a21\u5f0f\u7edf\u8ba1
+permit.monthly.statement.view=\u67E5\u770B\u6708\u5EA6\u7ED3\u7B97\u5355
+permit.monthly.statement.add=\u589E\u52A0\u6708\u5EA6\u7ED3\u7B97\u5355
+permit.monthly.statement.update=\u4FEE\u6539\u6708\u5EA6\u7ED3\u7B97\u5355
+permit.monthly.statement.delete=\u5220\u9664\u6708\u5EA6\u7ED3\u7B97\u5355
+permit.monthly.statement.check=\u6838\u5B9E\u6708\u5EA6\u7ED3\u7B97\u5355
+permit.monthly.statement.uncheck=\u53D6\u6D88\u6838\u5355\u7533\u8BF7
+permit.invoice.view=\u67E5\u770B\u53D1\u7968
+permit.invoice.add=\u589E\u52A0\u53D1\u7968
+permit.invoice.update=\u4FEE\u6539\u53D1\u7968
+permit.invoice.delete=\u5220\u9664\u53D1\u7968
+permit.invoice.check=\u6838\u5B9E\u53D1\u7968
+permit.invoice.uncheck=\u53D6\u6D88\u6838\u5355\u7533\u8BF7
+permit.received.payment.view=\u67E5\u770B\u5230\u6B3E\u8BB0\u5F55
+permit.received.payment.add=\u589E\u52A0\u5230\u6B3E\u8BB0\u5F55
+permit.received.payment.update=\u4FEE\u6539\u5230\u6B3E\u8BB0\u5F55
+permit.received.payment.delete=\u5220\u9664\u5230\u6B3E\u8BB0\u5F55
+permit.received.payment.check=\u6838\u5B9E\u5230\u6B3E\u8BB0\u5F55
+permit.received.payment.uncheck=\u53D6\u6D88\u6838\u5355\u7533\u8BF7
 
 
-permit.staffcost.joinstatistics.view=\u5458\u5de5\u5165\u573a\u7edf\u8ba1
-permit.staffcost.leavestatistics.view=\u5458\u5de5\u79bb\u573a\u7edf\u8ba1
+permit.gross.profit.view=\u67E5\u770B\u9879\u76EE\u5B9E\u9645\u6BDB\u5229
+permit.gross.profit2.view=\u67E5\u770B\u9879\u76EE\u6BDB\u5229
+permit.gross.profit3.view=\u67E5\u770B\u9879\u76EE\u56DE\u6B3E\u6BDB\u5229
 
-permit.departcost.view=\u67e5\u770b\u90e8\u95e8\u8d39\u7528
-permit.departcost.add=\u589e\u52a0\u90e8\u95e8\u8d39\u7528
-permit.departcost.update=\u4fee\u6539\u90e8\u95e8\u8d39\u7528
-permit.departcost.delete=\u5220\u9664\u90e8\u95e8\u8d39\u7528
-permit.departcost.check=\u6838\u5b9e\u90e8\u95e8\u8d39\u7528
-permit.departcost.uncheck=\u53d6\u6d88\u6838\u5355\u7533\u8bf7
-
-permit.departstatistics.view=\u5206\u90e8\u95e8\u7edf\u8ba1
+permit.sales.view=\u67E5\u770B\u9879\u76EE\u9500\u552E\u989D
+permit.receivables.view=\u67E5\u770B\u9879\u76EE\u5E94\u6536\u6B3E
+permit.staffprofit.view=\u5458\u5DE5\u5229\u6DA6\u7EDF\u8BA1
+permit.personnel.report=\u4EBA\u4E8B\u62A5\u8868
 
 
 
 
-permit.fileinfo.add=\u4e0a\u4f20\u6587\u4ef6
-permit.fileinfo.view=\u67e5\u770b\u6587\u4ef6
-permit.fileinfo.delete=\u5220\u9664\u6587\u4ef6
-permit.fileinfo.share=\u5206\u4eab\u6587\u4ef6
-permit.fileinfo.cancelshare=\u53d6\u6d88\u5206\u4eab
+permit.client.view=\u67E5\u770B\u5BA2\u6237
+permit.client.add=\u589E\u52A0\u5BA2\u6237
+permit.client.update=\u4FEE\u6539\u5BA2\u6237
+permit.client.delete=\u5220\u9664\u5BA2\u6237
+
+permit.insurance.grade.view=\u67E5\u770B\u4FDD\u9669\u6863\u6B21
+permit.insurance.grade.add=\u589E\u52A0\u4FDD\u9669\u6863\u6B21
+permit.insurance.grade.update=\u4FEE\u6539\u4FDD\u9669\u6863\u6B21
+permit.insurance.grade.delete=\u5220\u9664\u4FDD\u9669\u6863\u6B21
+
+
+permit.contract.view=\u67E5\u770B\u6536\u6B3E\u5408\u540C
+permit.contract.add=\u589E\u52A0\u6536\u6B3E\u5408\u540C
+permit.contract.update=\u4FEE\u6539\u6536\u6B3E\u5408\u540C
+permit.contract.delete=\u5220\u9664\u6536\u6B3E\u5408\u540C
+
+
+permit.paycontract.view=\u67E5\u770B\u4ED8\u6B3E\u5408\u540C
+permit.paycontract.add=\u589E\u52A0\u4ED8\u6B3E\u5408\u540C
+permit.paycontract.update=\u4FEE\u6539\u4ED8\u6B3E\u5408\u540C
+permit.paycontract.delete=\u5220\u9664\u4ED8\u6B3E\u5408\u540C
+
+permit.potentialclient.view=\u67E5\u770B\u6F5C\u5728\u5BA2\u6237
+permit.potentialclient.add=\u589E\u52A0\u6F5C\u5728\u5BA2\u6237
+permit.potentialclient.update=\u4FEE\u6539\u6F5C\u5728\u5BA2\u6237
+permit.potentialclient.delete=\u5220\u9664\u6F5C\u5728\u5BA2\u6237
+permit.potentialclient.tosales.delete=\u5206\u914D\u7ED9\u9500\u552E\u4EBA\u5458
+permit.potentialclient.followup.add=\u589E\u52A0\u8DDF\u8FDB\u8BB0\u5F55
+permit.potentialclient.followup.update=\u4FEE\u6539\u8DDF\u8FDB\u8BB0\u5F55
+permit.potentialclient.followup.delete=\u5220\u9664\u8DDF\u8FDB\u8BB0\u5F55
+
+permit.recruitinfo.view=\u67E5\u770B\u7B80\u5386
+permit.recruitinfo.review=\u7B80\u5386\u67E5\u91CD
+permit.recruit.library.view=\u67E5\u770B\u7B80\u5386\u5E93
+
+
+permit.staffex.view=\u67E5\u770B\u85AA\u916C\u6A21\u5F0F\u8BBE\u7F6E
+permit.staffex.update=\u7F16\u8F91\u85AA\u916C\u6A21\u5F0F\u8BBE\u7F6E
+permit.staffex.count.view=\u67E5\u770B\u8425\u9500\u6A21\u5F0F\u7EDF\u8BA1
+
+
+permit.staffcost.joinstatistics.view=\u5458\u5DE5\u5165\u573A\u7EDF\u8BA1
+permit.staffcost.leavestatistics.view=\u5458\u5DE5\u79BB\u573A\u7EDF\u8BA1
+
+permit.departcost.view=\u67E5\u770B\u90E8\u95E8\u8D39\u7528
+permit.departcost.add=\u589E\u52A0\u90E8\u95E8\u8D39\u7528
+permit.departcost.update=\u4FEE\u6539\u90E8\u95E8\u8D39\u7528
+permit.departcost.delete=\u5220\u9664\u90E8\u95E8\u8D39\u7528
+permit.departcost.check=\u6838\u5B9E\u90E8\u95E8\u8D39\u7528
+permit.departcost.uncheck=\u53D6\u6D88\u6838\u5355\u7533\u8BF7
+
+permit.departstatistics.view=\u5206\u90E8\u95E8\u7EDF\u8BA1
+
+permit.fileinfo.myfile=\u6211\u7684\u6587\u4EF6
+permit.fileinfo.addfolder=\u521B\u5EFA\u6587\u4EF6\u5939
+permit.fileinfo.delfolder=\u5220\u9664\u6587\u4EF6\u5939
+permit.fileinfo.add=\u4E0A\u4F20\u6587\u4EF6
+permit.fileinfo.delete=\u5220\u9664\u6587\u4EF6
+permit.fileinfo.share=\u5206\u4EAB\u6587\u4EF6
+permit.fileinfo.cancelshare=\u53D6\u6D88\u5206\u4EAB
+permit.fileinfo.myshare=\u6211\u7684\u5206\u4EAB
+permit.fileinfo.sharemy=\u5206\u4EAB\u7ED9\u6211\u7684
+
+
+permit.personnelmonthly.view=\u67E5\u770B\u4EBA\u4E8B\u6708\u62A5
+permit.personnelmonthly.add=\u589E\u52A0\u4EBA\u4E8B\u6708\u62A5
+permit.personnelmonthly.update=\u4FEE\u6539\u4EBA\u4E8B\u6708\u62A5
+permit.personnelmonthly.delete=\u5220\u9664\u4EBA\u4E8B\u6708\u62A5
+permit.personnelmonthly.check=\u6838\u5B9E\u4EBA\u4E8B\u6708\u62A5
+permit.personnelmonthly.uncheck=\u53D6\u6D88\u6838\u5355\u7533\u8BF7
+
+
+permit.insurance.view=\u67E5\u770B\u4FDD\u9669
+permit.insurance.add=\u589E\u52A0\u4FDD\u9669
+permit.insurance.update=\u4FEE\u6539\u4FDD\u9669
+permit.insurance.delete=\u5220\u9664\u4FDD\u9669
+permit.insurance.check=\u6838\u5B9E\u4FDD\u9669
+permit.insurance.uncheck=\u53D6\u6D88\u6838\u5355\u7533\u8BF7
+
+permit.voucher.interim.view=\u67E5\u770B\u51ED\u8BC1
 
 
 
-permit.personnelmonthly.view=\u67e5\u770b\u4eba\u4e8b\u6708\u62a5
-permit.personnelmonthly.add=\u589e\u52a0\u4eba\u4e8b\u6708\u62a5
-permit.personnelmonthly.update=\u4fee\u6539\u4eba\u4e8b\u6708\u62a5
-permit.personnelmonthly.delete=\u5220\u9664\u4eba\u4e8b\u6708\u62a5
-permit.personnelmonthly.check=\u6838\u5b9e\u4eba\u4e8b\u6708\u62a5
-permit.personnelmonthly.uncheck=\u53d6\u6d88\u6838\u5355\u7533\u8bf7
+permit.company.financial.analysis=\u67E5\u770B\u516C\u53F8\u8D22\u52A1\u5206\u6790
+permit.department.financial.analysis=\u67E5\u770B\u90E8\u95E8\u8D22\u52A1\u5206\u6790
+permit.sales.financial.analysis=\u67E5\u770B\u9500\u552E\u8D22\u52A1\u5206\u6790
 
 
-
-permit.insurance.view=\u67e5\u770b\u4fdd\u9669
-permit.insurance.add=\u589e\u52a0\u4fdd\u9669
-permit.insurance.update=\u4fee\u6539\u4fdd\u9669
-permit.insurance.delete=\u5220\u9664\u4fdd\u9669
-permit.insurance.check=\u6838\u5b9e\u4fdd\u9669
-permit.insurance.uncheck=\u53d6\u6d88\u6838\u5355\u7533\u8bf7
-
-permit.voucher.interim.view=\u67e5\u770b\u51ed\u8bc1
