处理需求   处理菜单 许可等

--- a/resources/message/MessageMenu_en_US.properties
+++ b/resources/message/MessageMenu_en_US.properties
@@ -1,3 +1,5 @@
+
+menu.level1.other.info=\u603B\u90E8\u4FE1\u606F
 menu.level1.basic.data=\u57FA\u7840\u6570\u636E
 menu.level1.project.costs=\u9879\u76EE\u6210\u672C
 menu.level1.project.income=\u9879\u76EE\u6536\u5165
@@ -11,7 +13,6 @@ menu.level1.advanced.function=\u9AD8\u7EA7\u529F\u80FD
 menu.level2.staff.costs=\u4EBA\u5458\u6210\u672C
 menu.level2.project=\u9879\u76EE\u4FE1\u606F
 menu.level2.client=\u5BA2\u6237\u7EF4\u62A4
-menu.level2.other.staff=\u884C\u653F\u4EBA\u5458
 menu.level2.insurance.grade=\u4FDD\u9669\u6863\u6B21
 menu.level2.contract=\u6536\u6B3E\u5408\u540C\u7BA1\u7406
 menu.level2.paycontract=\u4ED8\u6B3E\u5408\u540C\u7BA1\u7406
@@ -28,6 +29,13 @@ menu.level2.project.expend=\u9879\u76EE\u4ED8\u6B3E\u4FE1\u606F
 menu.level2.project.staff.cost=\u9879\u76EE\u4EBA\u5458\u6210\u672C
 menu.level2.project.salary.mail=\u5DE5\u8D44\u90AE\u4EF6
 menu.level2.common.cost=\u516C\u5171\u8D39\u7528\u7BA1\u7406
+
+
+
+menu.level2.other.staff=\u603B\u90E8\u4EBA\u5458
+menu.level2.other.work_attendance=\u603B\u90E8\u4EBA\u5458\u8003\u52E4
+menu.level2.other.salary=\u603B\u90E8\u4EBA\u5458\u5DE5\u8D44
+menu.level2.other.staff.cost=\u603B\u90E8\u4EBA\u5458\u6210\u672C
 
 
 menu.level2.monthly.statement=\u6708\u5EA6\u7ED3\u7B97\u5355
@@ -49,9 +57,11 @@ menu2.level2.sales.financial.analysis=\u9500\u552E\u8D22\u52A1\u5206\u6790
 
 menu2.level2.statistics.gross.profit=\u9879\u76EE\u5B9E\u9645\u6BDB\u5229
 menu2.level2.statistics.gross.profit2=\u9879\u76EE\u6BDB\u5229
+menu2.level2.statistics.gross.profit3=\u9879\u76EE\u56DE\u6B3E\u6BDB\u5229
 menu2.level2.statistics.sales=\u9879\u76EE\u9500\u552E\u989D
 menu2.level2.statistics.receivables=\u9879\u76EE\u5E94\u6536\u6B3E
 menu2.level2.staffprofit.statistics.report=\u5458\u5DE5\u5229\u6DA6\u7EDF\u8BA1
+menu2.level2.personnel.report=\u4EBA\u4E8B\u62A5\u8868
 
 
 menu.level2.user.manage=\u7528\u6237\u7BA1\u7406
