--- a/resources/message/MessageRbac_zh_CN.properties
+++ b/resources/message/MessageRbac_zh_CN.properties
@@ -64,16 +64,16 @@ permit.other.staff.view=\u67E5\u770B\u884C\u653F\u4EBA\u5458
 permit.other.staff.add=\u589E\u52A0\u884C\u653F\u4EBA\u5458
 permit.other.staff.update=\u4FEE\u6539\u884C\u653F\u4EBA\u5458
 permit.other.staff.delete=\u5220\u9664\u884C\u653F\u4EBA\u5458
-permit.other.work.attendance.view=\u67E5\u770B\u603B\u90E8\u8003\u52E4\u8BB0\u5F55
-permit.other.work.attendance.add=\u589E\u52A0\u603B\u90E8\u8003\u52E4\u8BB0\u5F55
-permit.other.work.attendance.update=\u4FEE\u6539\u603B\u90E8\u8003\u52E4\u8BB0\u5F55
-permit.other.work.attendance.delete=\u5220\u9664\u603B\u90E8\u8003\u52E4\u8BB0\u5F55
-permit.other.work.attendance.check=\u6838\u5B9E\u603B\u90E8\u8003\u52E4\u8BB0\u5F55
-permit.other.salary.view=\u67E5\u770B\u603B\u90E8\u5DE5\u8D44\u4FE1\u606F
-permit.other.salary.add=\u589E\u52A0\u603B\u90E8\u5DE5\u8D44\u4FE1\u606F
-permit.other.salary.update=\u4FEE\u6539\u603B\u90E8\u5DE5\u8D44\u4FE1\u606F
-permit.other.salary.delete=\u5220\u9664\u603B\u90E8\u5DE5\u8D44\u4FE1\u606F
-permit.other.salary.check=\u6838\u5B9E\u603B\u90E8\u5DE5\u8D44\u4FE1\u606F
+permit.other.work.attendance.view=\u67E5\u770B\u603B\u90E8\u4EBA\u5458\u8003\u52E4
+permit.other.work.attendance.add=\u589E\u52A0\u603B\u90E8\u4EBA\u5458\u8003\u52E4
+permit.other.work.attendance.update=\u4FEE\u6539\u603B\u90E8\u4EBA\u5458\u8003\u52E4
+permit.other.work.attendance.delete=\u5220\u9664\u603B\u90E8\u4EBA\u5458\u8003\u52E4
+permit.other.work.attendance.check=\u6838\u5B9E\u603B\u90E8\u4EBA\u5458\u8003\u52E4
+permit.other.salary.view=\u67E5\u770B\u603B\u90E8\u4EBA\u5458\u5DE5\u8D44
+permit.other.salary.add=\u589E\u52A0\u603B\u90E8\u4EBA\u5458\u5DE5\u8D44
+permit.other.salary.update=\u4FEE\u6539\u603B\u90E8\u4EBA\u5458\u5DE5\u8D44
+permit.other.salary.delete=\u5220\u9664\u603B\u90E8\u4EBA\u5458\u5DE5\u8D44
+permit.other.salary.check=\u6838\u5B9E\u603B\u90E8\u4EBA\u5458\u5DE5\u8D44
 permit.other.salary.uncheck=\u53D6\u6D88\u6838\u5355\u7533\u8BF7
 permit.other.staff.cost.view=\u67E5\u770B\u603B\u90E8\u4EBA\u5458\u6210\u672C
 
@@ -104,8 +104,8 @@ permit.gross.profit3.view=\u67E5\u770B\u9879\u76EE\u56DE\u6B3E\u6BDB\u5229
 
 permit.sales.view=\u67E5\u770B\u9879\u76EE\u9500\u552E\u989D
 permit.receivables.view=\u67E5\u770B\u9879\u76EE\u5E94\u6536\u6B3E
-permit.staffprofit.view=\u5458\u5DE5\u5229\u6DA6\u7EDF\u8BA1
-permit.personnel.report=\u4EBA\u4E8B\u62A5\u8868
+permit.staffprofit.view=\u67E5\u770B\u5458\u5DE5\u5229\u6DA6\u7EDF\u8BA1
+permit.personnel.report.view=\u67E5\u770B\u4EBA\u4E8B\u62A5\u8868
 
 
 
@@ -193,8 +193,8 @@ permit.voucher.interim.view=\u67E5\u770B\u51ED\u8BC1
 
 
 
-permit.company.financial.analysis=\u67E5\u770B\u516C\u53F8\u8D22\u52A1\u5206\u6790
-permit.department.financial.analysis=\u67E5\u770B\u90E8\u95E8\u8D22\u52A1\u5206\u6790
-permit.sales.financial.analysis=\u67E5\u770B\u9500\u552E\u8D22\u52A1\u5206\u6790
+permit.company.financial.analysis.view=\u67E5\u770B\u516C\u53F8\u8D22\u52A1\u5206\u6790
+permit.department.financial.analysis.view=\u67E5\u770B\u90E8\u95E8\u8D22\u52A1\u5206\u6790
+permit.sales.financial.analysis.view=\u67E5\u770B\u9500\u552E\u8D22\u52A1\u5206\u6790
 
 
