处理需求   处理菜单 许可等

--- a/resources/message/MessageRbac_en_US.properties
+++ b/resources/message/MessageRbac_en_US.properties
@@ -60,10 +60,10 @@ permit.common.cost.uncheck=\u53D6\u6D88\u6838\u5355\u7533\u8BF7
 
 
 
-permit.other.staff.view=\u67E5\u770B\u884C\u653F\u4EBA\u5458
-permit.other.staff.add=\u589E\u52A0\u884C\u653F\u4EBA\u5458
-permit.other.staff.update=\u4FEE\u6539\u884C\u653F\u4EBA\u5458
-permit.other.staff.delete=\u5220\u9664\u884C\u653F\u4EBA\u5458
+permit.other.staff.view=\u67E5\u770B\u603B\u90E8\u4EBA\u5458
+permit.other.staff.add=\u589E\u52A0\u603B\u90E8\u4EBA\u5458
+permit.other.staff.update=\u4FEE\u6539\u603B\u90E8\u4EBA\u5458
+permit.other.staff.delete=\u5220\u9664\u603B\u90E8\u4EBA\u5458
 permit.other.work.attendance.view=\u67E5\u770B\u603B\u90E8\u4EBA\u5458\u8003\u52E4
 permit.other.work.attendance.add=\u589E\u52A0\u603B\u90E8\u4EBA\u5458\u8003\u52E4
 permit.other.work.attendance.update=\u4FEE\u6539\u603B\u90E8\u4EBA\u5458\u8003\u52E4
