--- a/resources/message/MessageRbac_zh_CN.properties
+++ b/resources/message/MessageRbac_zh_CN.properties
@@ -56,14 +56,14 @@ permit.common.cost.add=\u589E\u52A0\u516C\u5171\u8D39\u7528\u4FE1\u606F
 permit.common.cost.update=\u4FEE\u6539\u516C\u5171\u8D39\u7528\u4FE1\u606F
 permit.common.cost.delete=\u5220\u9664\u516C\u5171\u8D39\u7528\u4FE1\u606F
 permit.common.cost.check=\u6838\u5B9E\u516C\u5171\u8D39\u7528\u4FE1\u606F
-permit.common.cost.uncheck=\u53D6\u6D88\u6838\u5355\u7533\u8BF7
+permit.common.cost.uncheck=\u53D6\u6D88\u6838\u5355\u7533\u8BF7   
 
 
 
-permit.other.staff.view=\u67E5\u770B\u884C\u653F\u4EBA\u5458
-permit.other.staff.add=\u589E\u52A0\u884C\u653F\u4EBA\u5458
-permit.other.staff.update=\u4FEE\u6539\u884C\u653F\u4EBA\u5458
-permit.other.staff.delete=\u5220\u9664\u884C\u653F\u4EBA\u5458
+permit.other.staff.view=\u67E5\u770B\u603B\u90E8\u4EBA\u5458
+permit.other.staff.add=\u589E\u52A0\u603B\u90E8\u4EBA\u5458
+permit.other.staff.update=\u4FEE\u6539\u603B\u90E8\u4EBA\u5458
+permit.other.staff.delete=\u5220\u9664\u603B\u90E8\u4EBA\u5458
 permit.other.work.attendance.view=\u67E5\u770B\u603B\u90E8\u4EBA\u5458\u8003\u52E4
 permit.other.work.attendance.add=\u589E\u52A0\u603B\u90E8\u4EBA\u5458\u8003\u52E4
 permit.other.work.attendance.update=\u4FEE\u6539\u603B\u90E8\u4EBA\u5458\u8003\u52E4
