--- a/resources/message/MessageLog_zh_CN.properties
+++ b/resources/message/MessageLog_zh_CN.properties
@@ -54,8 +54,8 @@ common.cost=\u516C\u5171\u8D39\u7528
 
 
 other.staff=\u603B\u90E8\u4EBA\u5458
-other.work.attendance=\u603B\u90E8\u8003\u52E4\u5355
-other.salary=\u603B\u90E8\u5DE5\u8D44
+other.work.attendance=\u603B\u90E8\u4EBA\u5458\u8003\u52E4
+other.salary=\u603B\u90E8\u4EBA\u5458\u5DE5\u8D44
 other.staff.cost=\u603B\u90E8\u4EBA\u5458\u6210\u672C
 
 
@@ -78,3 +78,4 @@ dicdata=\u5B57\u5178\u6570\u636E
 mail.sender=\u53D1\u4EF6\u7BB1
 set.param=\u53C2\u6570
 set.paramex=\u5DE5\u8D44\u516C\u5F0F\u8BBE\u7F6E
+common.cost.item=\u516C\u5171\u8D39\u7528\u7C7B\u578B
