处理需求   工资计算 ，增加待岗和产假

--- a/resources/message/MessageResource_en_US.properties
+++ b/resources/message/MessageResource_en_US.properties
@@ -116,6 +116,8 @@ staff.costs.threshold=\u4EBA\u5458\u6210\u672C\u63D0\u793A\u9600\u503C
 
 #\u5DE5\u8D44\u8BBE\u7F6E
 sick_leave_salary=\u75C5\u5047\u5DE5\u8D44\u8BBE\u7F6E
+waiting_post_salary=\u5F85\u5C97\u5DE5\u8D44\u8BBE\u7F6E
+maternity_leave_salary=\u4EA7\u5047\u5DE5\u8D44\u8BBE\u7F6E
 
 
 personnel.monthly.=\u5168\u90E8
