处理需求   项目收款管理

--- a/resources/message/MessageLog_en_US.properties
+++ b/resources/message/MessageLog_en_US.properties
@@ -49,6 +49,7 @@ salary=\u5DE5\u8D44
 project.staff.cost=\u9879\u76EE\u4EBA\u5458\u6210\u672C
 reimburse.costs=\u62A5\u9500\u8D39\u7528
 project.expend=\u9879\u76EE\u4ED8\u6B3E\u4FE1\u606F
+project.expend.pay=\u9879\u76EE\u4ED8\u6B3E\u5B9E\u9645\u652F\u4ED8\u4FE1\u606F
 common.cost=\u516C\u5171\u8D39\u7528
 
 
