--- a/resources/message/MessageLog_en_US.properties
+++ b/resources/message/MessageLog_en_US.properties
@@ -58,6 +58,7 @@ other.staff=\u603B\u90E8\u4EBA\u5458
 other.work.attendance=\u603B\u90E8\u4EBA\u5458\u8003\u52E4
 other.salary=\u603B\u90E8\u4EBA\u5458\u5DE5\u8D44
 other.staff.cost=\u603B\u90E8\u4EBA\u5458\u6210\u672C
+staff.performance=\u4EBA\u5458\u7EE9\u6548
 
 
 
