--- a/resources/message/MessageMenu_zh_CN.properties
+++ b/resources/message/MessageMenu_zh_CN.properties
@@ -36,6 +36,7 @@ menu.level2.other.staff=\u603B\u90E8\u4EBA\u5458
 menu.level2.other.work_attendance=\u603B\u90E8\u4EBA\u5458\u8003\u52E4
 menu.level2.other.salary=\u603B\u90E8\u4EBA\u5458\u5DE5\u8D44
 menu.level2.other.staff.cost=\u603B\u90E8\u4EBA\u5458\u6210\u672C
+menu.level2.staff.performance=\u4EBA\u5458\u7EE9\u6548
 
 
 menu.level2.monthly.statement=\u6708\u5EA6\u7ED3\u7B97\u5355
