--- a/resources/message/MessageRbac_zh_CN.properties
+++ b/resources/message/MessageRbac_zh_CN.properties
@@ -77,6 +77,13 @@ permit.other.salary.check=\u6838\u5B9E\u603B\u90E8\u4EBA\u5458\u5DE5\u8D44
 permit.other.salary.uncheck=\u53D6\u6D88\u6838\u5355\u7533\u8BF7
 permit.other.staff.cost.view=\u67E5\u770B\u603B\u90E8\u4EBA\u5458\u6210\u672C
 
+permit.staff.performance.view=\u67E5\u770B\u603B\u90E8\u4EBA\u5458\u7EE9\u6548
+permit.staff.performance.add=\u589E\u52A0\u603B\u90E8\u4EBA\u5458\u7EE9\u6548
+permit.staff.performance.update=\u4FEE\u6539\u603B\u90E8\u4EBA\u5458\u7EE9\u6548
+permit.staff.performance.delete=\u5220\u9664\u603B\u90E8\u4EBA\u5458\u7EE9\u6548
+permit.staff.performance.check=\u6838\u5B9E\u603B\u90E8\u4EBA\u5458\u7EE9\u6548
+permit.staff.performance.uncheck=\u53D6\u6D88\u6838\u5355\u7533\u8BF7
+
 
 permit.monthly.statement.view=\u67E5\u770B\u6708\u5EA6\u7ED3\u7B97\u5355
 permit.monthly.statement.add=\u589E\u52A0\u6708\u5EA6\u7ED3\u7B97\u5355
