财务分析  加上 合计

--- a/resources/message/MessageMenu_en_US.properties
+++ b/resources/message/MessageMenu_en_US.properties
@@ -47,6 +47,7 @@ menu2.level2.staffjoin.statistics=\u5458\u5DE5\u5165\u573A\u7EDF\u8BA1
 menu2.level2.staffleave.statistics=\u5458\u5DE5\u79BB\u573A\u7EDF\u8BA1
 menu2.level2.departcost.manage=\u90E8\u95E8\u8D39\u7528\u7BA1\u7406
 menu2.level2.depart.statistics.report=\u5206\u90E8\u95E8\u7EDF\u8BA1
+menu2.level2.cash.statistics.report=\u73B0\u91D1\u76C8\u4F59\u7EDF\u8BA1
 
 
 menu2.level2.company.financial.analysis=\u516C\u53F8\u8D22\u52A1\u5206\u6790
