--- a/resources/message/MessageRbac_zh_CN.properties
+++ b/resources/message/MessageRbac_zh_CN.properties
@@ -169,6 +169,7 @@ permit.departcost.check=\u6838\u5B9E\u90E8\u95E8\u8D39\u7528
 permit.departcost.uncheck=\u53D6\u6D88\u6838\u5355\u7533\u8BF7
 
 permit.departstatistics.view=\u5206\u90E8\u95E8\u7EDF\u8BA1
+permit.cashstatistics.view=\u73B0\u91D1\u76C8\u4F59\u7EDF\u8BA1
 
 permit.fileinfo.myfile=\u6211\u7684\u6587\u4EF6
 permit.fileinfo.addfolder=\u521B\u5EFA\u6587\u4EF6\u5939
