总部人员成本增加 成本中心

--- a/resources/message/MessageResource_zh_CN.properties
+++ b/resources/message/MessageResource_zh_CN.properties
@@ -137,3 +137,7 @@ personnel.monthly.8=\u5956\u91D1
 personnel.monthly.9=\u5DE5\u8D44\u8865\u5145
 
 
+cost.center.=\u65E0
+cost.center.1=\u603B\u90E8\u4EBA\u5458\u6210\u672C
+cost.center.2=\u9500\u552E\u6210\u672C
+cost.center.3=\u90E8\u95E8\u7BA1\u7406\u6210\u672C
