处理用户可以管理多个部门

--- a/resources/message/MessageMenu_en_US.properties
+++ b/resources/message/MessageMenu_en_US.properties
@@ -58,7 +58,7 @@ menu2.level2.sales.financial.analysis=\u9500\u552E\u8D22\u52A1\u5206\u6790
 
 
 menu2.level2.statistics.gross.profit=\u9879\u76EE\u5B9E\u9645\u6BDB\u5229
-menu2.level2.statistics.gross.profit2=\u9879\u76EE\u6BDB\u5229
+menu2.level2.statistics.gross.profit2=\u9879\u76EE\u8D26\u9762\u6BDB\u5229
 menu2.level2.statistics.gross.profit3=\u9879\u76EE\u56DE\u6B3E\u6BDB\u5229
 menu2.level2.statistics.sales=\u9879\u76EE\u9500\u552E\u989D
 menu2.level2.statistics.receivables=\u9879\u76EE\u5E94\u6536\u6B3E
