--- a/resources/message/MessageRbac_zh_CN.properties
+++ b/resources/message/MessageRbac_zh_CN.properties
@@ -106,7 +106,7 @@ permit.received.payment.uncheck=\u53D6\u6D88\u6838\u5355\u7533\u8BF7
 
 
 permit.gross.profit.view=\u67E5\u770B\u9879\u76EE\u5B9E\u9645\u6BDB\u5229
-permit.gross.profit2.view=\u67E5\u770B\u9879\u76EE\u6BDB\u5229
+permit.gross.profit2.view=\u67E5\u770B\u9879\u76EE\u8D26\u9762\u6BDB\u5229
 permit.gross.profit3.view=\u67E5\u770B\u9879\u76EE\u56DE\u6B3E\u6BDB\u5229
 
 permit.sales.view=\u67E5\u770B\u9879\u76EE\u9500\u552E\u989D
