--- a/resources/message/MessageRbac_en_US.properties
+++ b/resources/message/MessageRbac_en_US.properties
@@ -204,5 +204,6 @@ permit.voucher.interim.view=\u67E5\u770B\u51ED\u8BC1
 permit.company.financial.analysis.view=\u67E5\u770B\u516C\u53F8\u8D22\u52A1\u5206\u6790
 permit.department.financial.analysis.view=\u67E5\u770B\u90E8\u95E8\u8D22\u52A1\u5206\u6790
 permit.sales.financial.analysis.view=\u67E5\u770B\u9500\u552E\u8D22\u52A1\u5206\u6790
+permit.common.cost.analysis.view=\u67E5\u770B\u516C\u5171\u8D39\u7528\u5206\u6790
 
 
