--- a/resources/message/MessageMenu_zh_CN.properties
+++ b/resources/message/MessageMenu_zh_CN.properties
@@ -37,6 +37,8 @@ menu.level2.other.work_attendance=\u603B\u90E8\u4EBA\u5458\u8003\u52E4
 menu.level2.other.salary=\u603B\u90E8\u4EBA\u5458\u5DE5\u8D44
 menu.level2.other.staff.cost=\u603B\u90E8\u4EBA\u5458\u6210\u672C
 menu.level2.staff.performance=\u4EBA\u5458\u7EE9\u6548
+menu.level2.staff.personnelmonthly=\u603B\u90E8\u4EBA\u4E8B\u6708\u62A5
+menu.level2.staff.insurance=\u603B\u90E8\u4FDD\u9669
 
 
 menu.level2.monthly.statement=\u6708\u5EA6\u7ED3\u7B97\u5355
@@ -53,6 +55,7 @@ menu2.level2.cash.statistics.report=\u73B0\u91D1\u76C8\u4F59\u7EDF\u8BA1
 menu2.level2.company.financial.analysis=\u516C\u53F8\u8D22\u52A1\u5206\u6790
 menu2.level2.department.financial.analysis=\u90E8\u95E8\u8D22\u52A1\u5206\u6790
 menu2.level2.sales.financial.analysis=\u9500\u552E\u8D22\u52A1\u5206\u6790
+menu2.level2.common.cost.analysis=\u516C\u5171\u8D39\u7528\u5206\u6790
 
 
 
