处理总部人员的考勤

--- a/resources/message/MessageLog_en_US.properties
+++ b/resources/message/MessageLog_en_US.properties
@@ -66,7 +66,7 @@ monthly.statement=\u6708\u5EA6\u7ED3\u7B97\u5355
 invoice=\u53D1\u7968
 received.payment=\u5230\u6B3E\u8BB0\u5F55
 
-
+other.personnel.monthly=\u4EBA\u4E8B\u6708\u62A5
 personnelmonthly=\u4EBA\u4E8B\u6708\u62A5
 personnel.monthly=\u4EBA\u4E8B\u6708\u62A5
 insurance=\u4FDD\u9669
