处理总部人员的考勤

--- a/resources/message/MessageMenu_en_US.properties
+++ b/resources/message/MessageMenu_en_US.properties
@@ -38,7 +38,7 @@ menu.level2.other.salary=\u603B\u90E8\u4EBA\u5458\u5DE5\u8D44
 menu.level2.other.staff.cost=\u603B\u90E8\u4EBA\u5458\u6210\u672C
 menu.level2.staff.performance=\u4EBA\u5458\u7EE9\u6548
 menu.level2.staff.personnelmonthly=\u603B\u90E8\u4EBA\u4E8B\u6708\u62A5
-menu.level2.staff.insurance=\u603B\u90E8\u4FDD\u9669
+menu.level2.staff.insurance=\u603B\u90E8\u4EBA\u5458\u4FDD\u9669
 
 
 menu.level2.monthly.statement=\u6708\u5EA6\u7ED3\u7B97\u5355
